--- a/index.html
+++ b/index.html
@@ -2,6 +2,32 @@
 <html>
 <head>
 <title>Retirement</title>
+<style type="text/css">
+body {
+  background-color: #F5F5F5;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+#quote {
+  background-color: white;
+  border: 2px solid #A6B2BC;
+  color: black;
+  font-style: italic;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px 0 20px;
+  text-align: left;
+  width: 36em;
+}
+#days {
+  border: 2px solid #A6B2BC;
+  color: red;
+  margin-left: auto;
+  margin-right: auto;
+  width: 3em;
+}
+</style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -19,6 +45,7 @@ $(document).ready(function(){
 <h1>
 It could be that...
 </h1>
+<div id="quote" cite="Blaze Foley's Clay Pigeons">
 <p>
 I'm tired of running around looking
 for answers to questions that I already know.
@@ -27,13 +54,18 @@ for answers to questions that I already know.
 I might build me a castle of memories
 just to have somewhere to go.
 </p>
-<!-- From Blaze Foley's Clay Pigeons -->
+</div>
 
 <p>
 <span>&nbsp;</span>
 </p>
 <p>
-So... just spitballing here, but could there be <span id="days" style="color: red;">a lot of</span> days until retirement?
+So... just spitballing here, but how many days until retirement?
+</p>
+<p>
+<h1 id="days">A Lot</h1>
+</p>
+<p>
 How many <a href="https://www.timeanddate.com/date/workdays.html?y2=2026&m2=2&d2=2&ti=on">work days</a> is that?
 </p>
 
